# have_games_been_getting_worser

./: README.md
metacritic_scraper/: Cargo.toml  output.csv  top100games.csv
metacritic_scraper/src/: main.rs
